--- a/home.html
+++ b/home.html
@@ -5,5 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Website</title>
   </head>
-  <body></body>
+  <body>
+    <h1>This is my first website template</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur
+      cumque ipsa laudantium cupiditate accusantium eum laborum facere aut est,
+      numquam excepturi eaque, assumenda quas quaerat libero? Libero doloremque
+      doloribus ullam.
+    </p>
+    <button>Read More</button>
+  </body>
 </html>
