--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>This is my first website template</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur
-      cumque ipsa laudantium cupiditate accusantium eum laborum facere aut est,
-      numquam excepturi eaque, assumenda quas quaerat libero? Libero doloremque
-      doloribus ullam.
-    </p>
-    <button>Read More</button>
+    <header></header>
+    <main>
+      <article>
+        <header>
+          <h1></h1>
+        </header>
+      </article>
+    </main>
+    <footer></footer>
   </body>
 </html>
