--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="service.html">Service</a></li>
+          <li><a href="bloc.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        </ul>
+        </ul>
+        </ul>
+        </ul>
+      </nav>
+    </header>
     <main>
       <article>
         <header>
