new code added by rakib

--- a/form.html
+++ b/form.html
@@ -3,59 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Form Practise</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Product Form Design</title>
   </head>
   <body>
-    <header></header>
     <main>
       <section>
-        <h1>Please fill the form to place the order</h1>
-        <form class="forest">
-          <label for="name">
-            First Name:
-            <input id="name" type="text" placeholder="First Name" />
-          </label>
-          <label for="email"
-            >Your Email
-            <input id="email" type="email" placeholder="Email" />
-          </label>
-          <label for="phone"
-            >Your Phone
-            <input id="phone" type="number" placeholder="Phone" />
-          </label>
-          <label for="password"
-            >Your Password
-            <input id="password" type="password" placeholder="password" />
+        <form>
+          <h1>Please fill up the form</h1>
+
+          <label for="name"
+            >Your name
+            <input type="text" name="" id="" placeholder="Your Email" />
           </label>
 
-          <fieldset class="pitha">
-            <legend>Pick One</legend>
-            <label for="chitoy">
-              <input type="radio" name="Tea" id="" />Tea
-              <input type="radio" name="Tea" id="" />Tea
-              <input type="radio" name="Tea" id="" />Tea
-              <input type="radio" name="Tea" id="" />Tea
-            </label>
-          </fieldset>
+          <label for="number">Your Number: <input type="number" /></label>
 
           <fieldset>
-            <legend>Pick one or More vorta</legend>
-            <label> <input type="checkbox" />Shutki </label>
-            <label> <input type="checkbox" />Shutki </label>
-            <label> <input type="checkbox" />Shutki </label>
-            <label> <input type="checkbox" />Shutki </label>
+            <legend>Pick One Pitha</legend>
+            <label for="Chitoy"
+              ><input type="radio" name="iteam" />Chitoy</label
+            >
+            <label for="Chitoy"
+              ><input type="radio" name="iteam" />Chitoy</label
+            >
+            <label for="Chitoy"
+              ><input type="radio" name="iteam" />Chitoy</label
+            >
+            <label for="Chitoy"
+              ><input type="radio" name="iteam" />Chitoy</label
+            >
           </fieldset>
-
-          <fieldset>
-            <legend>Special Instruction:</legend>
-            <textarea cols="50" rows="5">Write your instruction </textarea>
-          </fieldset>
-          <input type="reset" value="reset" />
-          <input type="submit" value="Submit" />
         </form>
       </section>
     </main>
-    <footer></footer>
   </body>
 </html>
