--- a/megamenu.html
+++ b/megamenu.html
@@ -25,7 +25,7 @@
           <li><a href="blog.html">Blog</a></li>
           <li>
             <a href="service.html">Service</a>
-            <ul>
+            <ul class="nastedmenu">
               <li><a href="home.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="blog.html">Blog</a></li>
